# papersistd

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp  papersistd.service.in
